--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <!-- <script type="module" src="./js/lesson_2/script_7.js"></script> -->
     <!-- <script type="module" src="./js/lesson_2/script_8.js"></script> -->
     <!-- <script type="module" src="./js/lesson_2/script_9.js"></script> -->
-    <script type="module" src="./js/lesson_3/script_1.js"></script>
+    <!-- <script type="module" src="./js/lesson_3/script_1.js"></script> -->
+    <!-- <script type="module" src="./js/lesson_3/script_2.js"></script> -->
+    <!-- <script type="module" src="./js/lesson_3/script_3.js"></script> -->
+    <script type="module" src="./js/lesson_3/script_4.js"></script>
   </body>
 </html>
