--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <!-- <script type="module" src="./js/lesson_3/script_1.js"></script> -->
     <!-- <script type="module" src="./js/lesson_3/script_2.js"></script> -->
     <!-- <script type="module" src="./js/lesson_3/script_3.js"></script> -->
-    <script type="module" src="./js/lesson_3/script_4.js"></script>
+    <!-- <script type="module" src="./js/lesson_3/script_4.js"></script> -->
+    <!-- <script type="module" src="./js/lesson_3/script_5.js"></script> -->
+    <script type="module" src="./js/lesson_3/script_6.js"></script>
   </body>
 </html>
