--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <!-- <script type="module" src="./js/lesson_3/script_3.js"></script> -->
     <!-- <script type="module" src="./js/lesson_3/script_4.js"></script> -->
     <!-- <script type="module" src="./js/lesson_3/script_5.js"></script> -->
-    <script type="module" src="./js/lesson_3/script_6.js"></script>
+    <!-- <script type="module" src="./js/lesson_3/script_6.js"></script> -->
+    <script type="module" src="./js/lesson_3/script_7.js"></script>
   </body>
 </html>
